@@ -1,1 +1,29 @@
+# Contacts App Modification
+Made by Eldiiar Dzhunusov
 
+Contacts app with profile pictures
+
+## Add JavaFX library:
+### Ctrl+Shift+Alt+S
+### Libraries -> add library 
+### path->C:\javafx-sdk-11.0.2\lib (will depend)
+
+## Add VM Options:
+### Run-> Edit Configuration -> modify options -> add vm options
+### --module-path C:\javafx-sdk-11.0.2\lib --add-modules javafx.controls,javafx.fxml
+
+
+## Screenshots
+![](img1.png)
+
+---
+
+![](img2.png)
+
+---
+
+![](img3.png)
+
+---
+
+![](img4.png)
